<resources>
    <string name="app_name">Capstone</string>
    <string name="btn_register">REGISTER</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="text_welcome">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="desc_news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="content_description_profile">Content Description Profile</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="content_description_about">Content Description About</string>
    <string name="sign_out">Sign Out</string>
    <string name="content_description_sign_out">Content Description Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm">CONFIRM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>